--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="es">
 <head>
+	<meta charset="UTF-8">
 	<meta http-equiv='Content-type' content='text/html,charset=utf-8' />
 	<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0" />
 	<script type='text/javascript' src='js/jquery.min.js'></script>
